Fixed alignment in the right direction.

--- a/base.css
+++ b/base.css
@@ -22,7 +22,7 @@ header > h1 {
 code {
 	font: var(--font-monospace, monospace);
 	tab-size: 2;
-	text-align: right;
+	text-align: left;
 }
 math,
 .mjx-chtml {
